# Medical-Bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  app.py  app2DEL.py  pyproject.toml  setup.py  store_index.py  template.sh
.github/workflows/: cicd.yaml
research/: trials.ipynb
src/: helper.py  prompt.py
static/: style.css
templates/: chat.html  script.js
